// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a project 1`] = `
[
  ".gitignore",
  ".vscode",
  ".vscode/extensions.json",
  ".vscode/launch.json",
  "README.md",
  "astro.config.ts",
  "icons",
  "icons/languages",
  "icons/languages/css.svg",
  "icons/languages/html.svg",
  "icons/languages/js.svg",
  "icons/languages/json.svg",
  "icons/languages/markdown.svg",
  "icons/languages/sass.svg",
  "icons/languages/ts.svg",
  "package.json",
  "public",
  "public/favicon.svg",
  "public/logo-dark.svg",
  "public/logo.svg",
  "src",
  "src/content",
  "src/content/config.ts",
  "src/content/tutorial",
  "src/content/tutorial/1-basics",
  "src/content/tutorial/1-basics/1-introduction",
  "src/content/tutorial/1-basics/1-introduction/1-welcome",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test/bar.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/content.md",
  "src/content/tutorial/1-basics/1-introduction/2-foo",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar/styles.css",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-1.js",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-10.ts",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-11.jsx",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-12.tsx",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-13.cts",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-14.mts",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-15.svg",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-16.vue",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-2.cjs",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-3.mjs",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-4.css",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-5.md",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-6.png",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-7.jpg",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-8.gif",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-9.xyz",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/unicorn.js",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/windows_xp.png",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_solution",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_solution/src",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_solution/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/2-foo/content.mdx",
  "src/content/tutorial/1-basics/1-introduction/3-bar",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/3-bar/content.md",
  "src/content/tutorial/1-basics/1-introduction/meta.md",
  "src/content/tutorial/1-basics/2-foo",
  "src/content/tutorial/1-basics/2-foo/1-welcome",
  "src/content/tutorial/1-basics/2-foo/1-welcome/content.md",
  "src/content/tutorial/1-basics/2-foo/meta.md",
  "src/content/tutorial/1-basics/meta.md",
  "src/content/tutorial/2-advanced",
  "src/content/tutorial/2-advanced/1-unicorn",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome/content.md",
  "src/content/tutorial/2-advanced/1-unicorn/meta.md",
  "src/content/tutorial/2-advanced/meta.md",
  "src/content/tutorial/meta.md",
  "src/env.d.ts",
  "src/templates",
  "src/templates/default",
  "src/templates/default/package-lock.json",
  "src/templates/default/package.json",
  "src/templates/default/src",
  "src/templates/default/src/index.js",
  "src/templates/vite-app",
  "src/templates/vite-app-2",
  "src/templates/vite-app-2/.tk-config.json",
  "src/templates/vite-app-2/foo.txt",
  "src/templates/vite-app/.gitignore",
  "src/templates/vite-app/counter.js",
  "src/templates/vite-app/index.html",
  "src/templates/vite-app/javascript.svg",
  "src/templates/vite-app/main.js",
  "src/templates/vite-app/package-lock.json",
  "src/templates/vite-app/package.json",
  "src/templates/vite-app/public",
  "src/templates/vite-app/public/vite.svg",
  "src/templates/vite-app/style.css",
  "tsconfig.json",
  "uno.config.ts",
]
`;

exports[`create and build a project > built project file references 1`] = `
{
  "1-basics-1-introduction-1-welcome-files.json": [
    "/src/index.js",
    "/src/test/bar.js",
  ],
  "1-basics-1-introduction-1-welcome-solution.json": [
    "/src/index.js",
  ],
  "1-basics-1-introduction-2-foo-files.json": [
    "/bar/styles.css",
    "/src/index.html",
    "/src/test-1.js",
    "/src/test-10.ts",
    "/src/test-11.jsx",
    "/src/test-12.tsx",
    "/src/test-13.cts",
    "/src/test-14.mts",
    "/src/test-15.svg",
    "/src/test-16.vue",
    "/src/test-2.cjs",
    "/src/test-3.mjs",
    "/src/test-4.css",
    "/src/test-5.md",
    "/src/test-6.png",
    "/src/test-7.jpg",
    "/src/test-8.gif",
    "/src/test-9.xyz",
    "/src/unicorn.js",
    "/src/windows_xp.png",
  ],
  "1-basics-1-introduction-2-foo-solution.json": [
    "/src/index.html",
  ],
  "1-basics-1-introduction-3-bar-files.json": [
    "/src/index.html",
  ],
  "template-default.json": [
    "/package-lock.json",
    "/package.json",
    "/src/index.js",
  ],
  "template-vite-app-2.json": [
    "/.gitignore",
    "/counter.js",
    "/foo.txt",
    "/index.html",
    "/javascript.svg",
    "/main.js",
    "/package-lock.json",
    "/package.json",
    "/public/vite.svg",
    "/style.css",
  ],
  "template-vite-app.json": [
    "/.gitignore",
    "/counter.js",
    "/index.html",
    "/javascript.svg",
    "/main.js",
    "/package-lock.json",
    "/package.json",
    "/public/vite.svg",
    "/style.css",
  ],
}
`;

exports[`create and build a project 1`] = `
[
  "1-basics",
  "1-basics-1-introduction-1-welcome-files.json",
  "1-basics-1-introduction-1-welcome-solution.json",
  "1-basics-1-introduction-2-foo-files.json",
  "1-basics-1-introduction-2-foo-solution.json",
  "1-basics-1-introduction-3-bar-files.json",
  "1-basics/2-foo",
  "1-basics/2-foo/1-welcome",
  "1-basics/2-foo/1-welcome/index.html",
  "1-basics/custom-chapter-slug",
  "1-basics/custom-chapter-slug/1-welcome",
  "1-basics/custom-chapter-slug/1-welcome/index.html",
  "1-basics/custom-chapter-slug/bar",
  "1-basics/custom-chapter-slug/bar/index.html",
  "1-basics/custom-chapter-slug/foo",
  "1-basics/custom-chapter-slug/foo/index.html",
  "2-advanced",
  "2-advanced/1-unicorn",
  "2-advanced/1-unicorn/1-welcome",
  "2-advanced/1-unicorn/1-welcome/index.html",
  "favicon.svg",
  "index.html",
  "logo-dark.svg",
  "logo.svg",
  "template-default.json",
  "template-vite-app-2.json",
  "template-vite-app.json",
]
`;

exports[`create and eject a project 1`] = `
[
  ".gitignore",
  ".vscode",
  ".vscode/extensions.json",
  ".vscode/launch.json",
  "README.md",
  "astro.config.ts",
  "icons",
  "icons/languages",
  "icons/languages/css.svg",
  "icons/languages/html.svg",
  "icons/languages/js.svg",
  "icons/languages/json.svg",
  "icons/languages/markdown.svg",
  "icons/languages/sass.svg",
  "icons/languages/ts.svg",
  "package.json",
  "pnpm-lock.yaml",
  "public",
  "public/favicon.svg",
  "public/logo-dark.svg",
  "public/logo.svg",
  "src",
  "src/components",
  "src/components/DownloadButton.tsx",
  "src/components/HeadTags.astro",
  "src/components/LoginButton.tsx",
  "src/components/Logo.astro",
  "src/components/MainContainer.astro",
  "src/components/MetaTags.astro",
  "src/components/MobileContentToggle.astro",
  "src/components/NavCard.astro",
  "src/components/NavWrapper.tsx",
  "src/components/OpenInStackblitzLink.tsx",
  "src/components/PageLoadingIndicator.astro",
  "src/components/ResizablePanel.astro",
  "src/components/ThemeSwitch.tsx",
  "src/components/TopBar.astro",
  "src/components/TopBarWrapper.astro",
  "src/components/TutorialContent.astro",
  "src/components/WorkspacePanelWrapper.tsx",
  "src/components/setup.ts",
  "src/components/webcontainer.ts",
  "src/content",
  "src/content/config.ts",
  "src/content/tutorial",
  "src/content/tutorial/1-basics",
  "src/content/tutorial/1-basics/1-introduction",
  "src/content/tutorial/1-basics/1-introduction/1-welcome",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_files/src/test/bar.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/_solution/src/index.js",
  "src/content/tutorial/1-basics/1-introduction/1-welcome/content.md",
  "src/content/tutorial/1-basics/1-introduction/2-foo",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/bar/styles.css",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-1.js",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-10.ts",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-11.jsx",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-12.tsx",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-13.cts",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-14.mts",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-15.svg",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-16.vue",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-2.cjs",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-3.mjs",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-4.css",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-5.md",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-6.png",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-7.jpg",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-8.gif",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/test-9.xyz",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/unicorn.js",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_files/src/windows_xp.png",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_solution",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_solution/src",
  "src/content/tutorial/1-basics/1-introduction/2-foo/_solution/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/2-foo/content.mdx",
  "src/content/tutorial/1-basics/1-introduction/3-bar",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src",
  "src/content/tutorial/1-basics/1-introduction/3-bar/_files/src/index.html",
  "src/content/tutorial/1-basics/1-introduction/3-bar/content.md",
  "src/content/tutorial/1-basics/1-introduction/meta.md",
  "src/content/tutorial/1-basics/2-foo",
  "src/content/tutorial/1-basics/2-foo/1-welcome",
  "src/content/tutorial/1-basics/2-foo/1-welcome/content.md",
  "src/content/tutorial/1-basics/2-foo/meta.md",
  "src/content/tutorial/1-basics/meta.md",
  "src/content/tutorial/2-advanced",
  "src/content/tutorial/2-advanced/1-unicorn",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome",
  "src/content/tutorial/2-advanced/1-unicorn/1-welcome/content.md",
  "src/content/tutorial/2-advanced/1-unicorn/meta.md",
  "src/content/tutorial/2-advanced/meta.md",
  "src/content/tutorial/meta.md",
  "src/env-default.d.ts",
  "src/env.d.ts",
  "src/layouts",
  "src/layouts/Layout.astro",
  "src/pages",
  "src/pages/[...slug].astro",
  "src/pages/index.astro",
  "src/stores",
  "src/stores/auth-store.ts",
  "src/stores/theme-store.ts",
  "src/stores/view-store.ts",
  "src/styles",
  "src/styles/base.css",
  "src/styles/markdown.css",
  "src/styles/panel.css",
  "src/styles/variables.css",
  "src/templates",
  "src/templates/default",
  "src/templates/default/package-lock.json",
  "src/templates/default/package.json",
  "src/templates/default/src",
  "src/templates/default/src/index.js",
  "src/templates/vite-app",
  "src/templates/vite-app-2",
  "src/templates/vite-app-2/.tk-config.json",
  "src/templates/vite-app-2/foo.txt",
  "src/templates/vite-app/.gitignore",
  "src/templates/vite-app/counter.js",
  "src/templates/vite-app/index.html",
  "src/templates/vite-app/javascript.svg",
  "src/templates/vite-app/main.js",
  "src/templates/vite-app/package-lock.json",
  "src/templates/vite-app/package.json",
  "src/templates/vite-app/public",
  "src/templates/vite-app/public/vite.svg",
  "src/templates/vite-app/style.css",
  "src/utils",
  "src/utils/constants.ts",
  "src/utils/content",
  "src/utils/content.ts",
  "src/utils/content/files-ref.ts",
  "src/utils/content/squash.ts",
  "src/utils/logger.ts",
  "src/utils/logo.ts",
  "src/utils/nav.ts",
  "src/utils/publicAsset.ts",
  "src/utils/routes.ts",
  "src/utils/url.ts",
  "src/utils/workspace.ts",
  "tsconfig.json",
  "uno.config.ts",
]
`;

exports[`create and eject a project 2`] = `
"import tutorialkit from '@tutorialkit/astro';
import { defineConfig } from 'astro/config';

export default defineConfig({
  devToolbar: {
    enabled: false
  },
  integrations: [tutorialkit({
    defaultRoutes: false
  })]
});"
`;

exports[`create, eject and build a project 1`] = `
[
  "1-basics",
  "1-basics-1-introduction-1-welcome-files.json",
  "1-basics-1-introduction-1-welcome-solution.json",
  "1-basics-1-introduction-2-foo-files.json",
  "1-basics-1-introduction-2-foo-solution.json",
  "1-basics-1-introduction-3-bar-files.json",
  "1-basics/2-foo",
  "1-basics/2-foo/1-welcome",
  "1-basics/2-foo/1-welcome/index.html",
  "1-basics/custom-chapter-slug",
  "1-basics/custom-chapter-slug/1-welcome",
  "1-basics/custom-chapter-slug/1-welcome/index.html",
  "1-basics/custom-chapter-slug/bar",
  "1-basics/custom-chapter-slug/bar/index.html",
  "1-basics/custom-chapter-slug/foo",
  "1-basics/custom-chapter-slug/foo/index.html",
  "2-advanced",
  "2-advanced/1-unicorn",
  "2-advanced/1-unicorn/1-welcome",
  "2-advanced/1-unicorn/1-welcome/index.html",
  "favicon.svg",
  "index.html",
  "logo-dark.svg",
  "logo.svg",
  "template-default.json",
  "template-vite-app-2.json",
  "template-vite-app.json",
]
`;
